--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <title>Vite App</title>
   </head>
   <body>
-    <div id="app" class="min-n-screen bg-zinc-100 p-8"></div>
+    <div id="app" ></div>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
